syntax = "proto3";

package raystack.raccoon;

message SampleEvent {
  string description = 1;
}
